added registeration and login

--- a/Backend/public/register.html
+++ b/Backend/public/register.html
@@ -22,7 +22,7 @@
     <div class="popup" id="successPopup">
         <div class="popup-content d-flex align-items-center">
             <div>
-                <p class="msg">Success! Your action was completed successfully.</p>
+                <p class="msg"></p>
             </div>
             <div>
                 <span class="close" onclick="closePopup('successPopup')">&times;</span>
@@ -33,7 +33,7 @@
     <div class="popup" id="failedPopup">
         <div class="popup-content d-flex align-items-center">
             <div>
-                <p class="failedMsg">Success! Your action was completed successfully.</p>
+                <p class="failedMsg"></p>
             </div>
             <div>
                 <span class="close" onclick="failedClosePopup('failedPopup')">&times;</span>
