--- a/Backend/public/login.html
+++ b/Backend/public/login.html
@@ -18,8 +18,19 @@
 
 <body>
 
-    <!-- nav -->
+    <!-- model -->
+    <div class="popup" id="failedPopup">
+        <div class="popup-content d-flex align-items-center">
+            <div>
+                <p class="failedMsg"></p>
+            </div>
+            <div>
+                <span class="close" onclick="failedClosePopup('failedPopup')">&times;</span>
+            </div>
+        </div>
+    </div>
 
+    <!-- nav -->
     <div class="container-fluid nav-bg sticky">
         <div class="container py-2 nav-bg">
             <nav class="navbar navbar-expand-lg">
@@ -59,8 +70,8 @@
                                         href="/getQuote.html">Get a Quote</a>
                                 </li>
                                 <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover text-white" id="Register" aria-current="page"
-                                        href="/login.html">Login</a>
+                                    <a class="nav-link rounded nav-space nav-link-hover text-white" id="Register"
+                                        aria-current="page" href="/login.html">Login</a>
                                 </li>
                             </ul>
                         </form>
@@ -79,16 +90,19 @@
                     <input type="email" class="form-control py-2" id="email" placeholder="email">
                     <p id="emailError" class="text-danger"></p>
                 </div>
-        
+
                 <div class="mb-3">
                     <label for="email" class="form-label fw-bold">Password</label>
                     <input type="password" class="form-control py-2" id="password" placeholder="password">
                     <p id="passwordError" class="text-danger"></p>
                 </div>
-        
-                <button type="submit" class="submit-btn">Login</button>
+                <div class="mt-3 text-start">
+                    <a href="/forgot-password" class="forgot-password-link text-decoration-none">Forgot Password?</a>
+                </div>
+                <button type="submit" class="submit-btn mt-2">Login</button>
             </form>
-            <p class="mt-3">Don't have an account? <a href="/register.html" class="text-decoration-none">Register</a></p>
+            <p class="mt-3">Don't have an account? <a href="/register.html" class="text-decoration-none">Register</a>
+            </p>
         </div>
     </div>
 
