--- a/Backend/public/fargetPasswordEmail.html
+++ b/Backend/public/fargetPasswordEmail.html
@@ -19,6 +19,17 @@
 <body>
 
     <!-- model -->
+    <div class="popup" id="successPopup">
+        <div class="popup-content d-flex align-items-center">
+            <div>
+                <p class="msg"></p>
+            </div>
+            <div>
+                <span class="close" onclick="closePopup('successPopup')">&times;</span>
+            </div>
+        </div>
+    </div>
+
     <div class="popup" id="failedPopup">
         <div class="popup-content d-flex align-items-center">
             <div>
@@ -91,17 +102,9 @@
                     <p id="emailError" class="text-danger"></p>
                 </div>
 
-                <div class="mb-3">
-                    <label for="email" class="form-label fw-bold">Password</label>
-                    <input type="password" class="form-control py-2" id="password" placeholder="password">
-                    <p id="passwordError" class="text-danger"></p>
-                </div>
-                <div class="mt-3 text-start">
-                    <a href="fargetPasswordEmail.html" class="forgot-password-link text-decoration-none">Forgot Password?</a>
-                </div>
-                <button type="submit" class="submit-btn mt-2">Login</button>
+                <button type="submit" class="submit-btn mt-2">Send</button>
             </form>
-            <p class="mt-3">Don't have an account? <a href="/register.html" class="text-decoration-none">Register</a>
+            <p class="mt-3">Already have an account? <a href="/login.html" class="text-decoration-none">Login</a>
             </p>
         </div>
     </div>
@@ -230,7 +233,7 @@
         </div>
     </div>
 
-    <script src="./js/login.js"></script>
+    <script src="./js/forPasswordEmail.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
