--- a/Backend/public/register.html
+++ b/Backend/public/register.html
@@ -81,8 +81,11 @@
                                         href="/getQuote.html">Get a Quote</a>
                                 </li>
                                 <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover text-white" id="Register"
-                                        aria-current="page" href="/login.html">Login</a>
+                                    <a class="nav-link rounded nav-space nav-link-hover login text-white" id="Register" aria-current="page"
+                                        href="/login.html">Login</a>
+                                </li>
+                                <li class="nav-item px-2">
+                                    <a class="nav-link rounded nav-space nav-link-hover logout text-white" id="Register" aria-current="page" href="#" onclick="logout()">Logout</a>
                                 </li>
                             </ul>
                         </form>
