--- a/Backend/public/support.html
+++ b/Backend/public/support.html
@@ -60,8 +60,11 @@
                                 </li>
 
                                 <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover text-white" id="Register" aria-current="page"
-                                        href="#">Login</a>
+                                    <a class="nav-link rounded nav-space nav-link-hover login text-white" id="Register" aria-current="page"
+                                        href="/login.html">Login</a>
+                                </li>
+                                <li class="nav-item px-2">
+                                    <a class="nav-link rounded nav-space nav-link-hover logout text-white" id="Register" aria-current="page" href="#" onclick="logout()">Logout</a>
                                 </li>
                             </ul>
                         </form>
