--- a/Backend/public/about.html
+++ b/Backend/public/about.html
@@ -37,6 +37,10 @@
                                         href="/index.html">Home</a>
                                 </li>
                                 <li class="nav-item px-2">
+                                    <a class="nav-link rounded nav-space nav-link-hover text-white" id="dashboard" aria-current="page"
+                                        href="/dashboard.html">dashboard</a>
+                                </li>
+                                <li class="nav-item px-2">
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
                                         href="/renderNow.html">Render Now</a>
                                 </li>
@@ -443,7 +447,7 @@
         </div>
     </div>
 
-    <script src="./js/index.js"></script>
+    <script src="./js/about.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
