--- a/Backend/public/dashboard.html
+++ b/Backend/public/dashboard.html
@@ -8,39 +8,32 @@
     <title>Farm</title>
     <script src="https://kit.fontawesome.com/68d0b9a83f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/dashboard.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
-
 </head>
 
 <body>
 
-    <!-- model -->
-    <div class="popup" id="successPopup">
-        <div class="popup-content d-flex align-items-center">
-            <div>
-                <p class="msg"></p>
-            </div>
-            <div>
-                <span class="close" onclick="closePopup('successPopup')">&times;</span>
-            </div>
-        </div>
-    </div>
-
-    <div class="popup" id="failedPopup">
-        <div class="popup-content d-flex align-items-center">
-            <div>
-                <p class="failedMsg"></p>
-            </div>
-            <div>
-                <span class="close" onclick="failedClosePopup('failedPopup')">&times;</span>
-            </div>
-        </div>
-    </div>
     <!-- nav -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container-fluid nav-bg sticky">
         <div class="container py-2 nav-bg">
@@ -54,7 +47,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent" data-aos="fade-left">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
-                        <form class="d-flex" role="search" id="myForm">
+                        <form class="d-flex" role="search">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item px-2">
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
@@ -85,11 +78,12 @@
                                         href="/getQuote.html">Get a Quote</a>
                                 </li>
                                 <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover login text-white" id="Register" aria-current="page"
-                                        href="/login.html">Login</a>
+                                    <a class="nav-link rounded nav-space nav-link-hover login text-white" id="Register"
+                                        aria-current="page" href="/login.html">Login</a>
                                 </li>
                                 <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover logout text-white" id="Register" aria-current="page" href="#" onclick="logout()">Logout</a>
+                                    <a class="nav-link rounded nav-space nav-link-hover logout text-white" id="Register"
+                                        aria-current="page" href="#" onclick="logout()">Logout</a>
                                 </li>
                             </ul>
                         </form>
@@ -100,47 +94,11 @@
 
     </div>
 
-    <div class="container-fluid form-container">
-        <div class="container text-center p-5 width-adjust">
-            <form class="border rounded shadow-lg p-3" onsubmit="validateAndSubmit(event)">
-                <div class="mb-3">
-                    <label for="username" class="form-label fw-bold">User Name</label>
-                    <input type="text" class="form-control py-2" id="username" placeholder="username">
-                    <div id="usernameError" class="error-message text-danger"></div>
-                </div>
-
-                <div class="mb-3">
-                    <label for="email" class="form-label fw-bold">Email</label>
-                    <input type="email" class="form-control py-2" id="email" placeholder="email">
-                    <div id="emailError" class="error-message text-danger"></div>
-                </div>
-
-                <div class="mb-3">
-                    <label for="phone" class="form-label fw-bold">Phone</label>
-                    <input type="tel" class="form-control py-2" id="phone" placeholder="phone">
-                    <div id="phoneError" class="error-message text-danger"></div>
-                </div>
-
-                <div class="mb-3">
-                    <label for="password" class="form-label fw-bold">Password</label>
-                    <input type="password" class="form-control py-2" id="password" placeholder="password">
-                    <div id="passwordError" class="error-message text-danger"></div>
-                </div>
-
-                <div class="mb-3">
-                    <label for="confirmPassword" class="form-label fw-bold">Confirm Password</label>
-                    <input type="password" class="form-control py-2" id="confirmPassword"
-                        placeholder="Confirm Password">
-                    <div id="confirmPasswordError" class="error-message text-danger"></div>
-                </div>
-
-                <button type="submit" class="submit-btn">Register</button>
-            </form>
-            <p class="mt-3">Already have an account? <a href="/login.html" class="text-decoration-none">Login</a></p>
-        </div>
+    <div class="container">
+        Hello world
     </div>
 
-    <div class="container-fluid secondary pt-5">
+    <div class="container-fluid secondary">
         <div class="container justify-content-between">
             <div class="row">
                 <div class="col-md-6 col-lg-3 my-4 text-center" data-aos="flip-left">
@@ -264,7 +222,7 @@
         </div>
     </div>
 
-    <script src="./js/register.js"></script>
+    <script src="./js/dashboard.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
