--- a/Backend/public/index.html
+++ b/Backend/public/index.html
@@ -54,6 +54,10 @@
                                         href="/index.html">Home</a>
                                 </li>
                                 <li class="nav-item px-2">
+                                    <a class="nav-link rounded nav-space nav-link-hover text-white" id="dashboard" aria-current="page"
+                                        href="/dashboard.html">dashboard</a>
+                                </li>
+                                <li class="nav-item px-2">
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
                                         href="/renderNow.html">Render Now</a>
                                 </li>
