added upload file

--- a/Backend/public/getQuote.html
+++ b/Backend/public/getQuote.html
@@ -49,12 +49,12 @@
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
                                         href="/index.html">Home</a>
                                 </li>
-                                <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover text-white" id="dashboard" aria-current="page"
+                                <li class="nav-item px-2" id="dashboard">
+                                    <a class="nav-link rounded nav-space nav-link-hover text-white"  aria-current="page"
                                         href="/dashboard.html">dashboard</a>
                                 </li>
-                                <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
+                                <li class="nav-item px-2" id="rendernow">
+                                    <a class="nav-link rounded nav-space nav-link-hover text-white"  aria-current="page"
                                         href="/renderNow.html">Render Now</a>
                                 </li>
                                 <li class="nav-item px-2">
