--- a/Backend/public/index.html
+++ b/Backend/public/index.html
@@ -16,6 +16,17 @@
 
 <body>
 
+    <div class="popup" id="failedPopup">
+        <div class="popup-content d-flex align-items-center">
+            <div>
+                <p class="failedMsg"></p>
+            </div>
+            <div>
+                <span class="close" onclick="failedClosePopup('failedPopup')">&times;</span>
+            </div>
+        </div>
+    </div>
+
     <!-- nav -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -53,12 +64,12 @@
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
                                         href="/index.html">Home</a>
                                 </li>
-                                <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover text-white" id="dashboard" aria-current="page"
+                                <li class="nav-item px-2" id="dashboard">
+                                    <a class="nav-link rounded nav-space nav-link-hover text-white"  aria-current="page"
                                         href="/dashboard.html">dashboard</a>
                                 </li>
-                                <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
+                                <li class="nav-item px-2" id="rendernow">
+                                    <a class="nav-link rounded nav-space nav-link-hover text-white"  aria-current="page"
                                         href="/renderNow.html">Render Now</a>
                                 </li>
                                 <li class="nav-item px-2">
@@ -228,40 +239,7 @@
     <div class="container my-5" id="pricing">
         <div class="row text-center g-lg-5 d-flex gap-3">
             <div class="col-lg-2 col-md-4 col-sm-6 mb-2 flex-fill" data-aos="flip-left" data-aos-duration="2000">
-                <div
-                    class=" shadow-sm pricing rounded d-flex flex-column justify-content-center align-items-center gap-4 p-4 h-100">
-                    <div>
-                        <span>Basic Plan</span>
-                    </div>
-                    <div>
-                        <span class="h1">₹ 0</span>
-                    </div>
-                    <div>
-                        <span>100% free. Forever</span>
-                    </div>
-                    <div>
-                        <span>ENJOY ALL THE FEATURES</span>
-                    </div>
-                    <div>
-                        <span>150 GB Bandwidth</span>
-                    </div>
-                    <div>
-                        <span>100 GB Storage</span>
-                    </div>
-                    <div>
-                        <span>$1.00 / GB Overages</span>
-                    </div>
-                    <div>
-                        <span>Advance Plan</span>
-                    </div>
-                    <div>
-                        <button type="button" class="pricing-btn">Choose Plan</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 mb-2 flex-fill" data-aos="flip-left" data-aos-duration="2000">
-                <div
-                    class=" shadow-sm pricing rounded d-flex flex-column justify-content-center align-items-center gap-4 p-4 h-100">
+                <div class="shadow-sm pricing rounded d-flex flex-column justify-content-center align-items-center gap-4 p-4 h-100">
                     <div>
                         <span>Basic Plan</span>
                     </div>
@@ -286,19 +264,19 @@
                     <div>
                         <span>Advance Plan</span>
                     </div>
-                    <div>
-                        <button type="button" class="pricing-btn">Choose Plan</button>
-                    </div>
+                    <form id="stripe-form">
+                        <button type="button" class="pricing-btn" onclick="handleSubscribeClick(1)">Choose Plan</button>
+                    </form>
                 </div>
             </div>
             <div class="col-lg-2 col-md-4 col-sm-6 mb-2 flex-fill" data-aos="flip-left" data-aos-duration="2000">
                 <div
                     class=" shadow-sm pricing rounded d-flex flex-column justify-content-center align-items-center gap-4 p-4 h-100">
                     <div>
-                        <span>Basic Plan</span>
+                        <span>Standard Plan</span>
                     </div>
                     <div>
-                        <span class="h1">₹ 1,000</span>
+                        <span class="h1">₹ 1000</span>
                     </div>
                     <div>
                         <span>100% free. Forever</span>
@@ -319,7 +297,7 @@
                         <span>Advance Plan</span>
                     </div>
                     <div>
-                        <button type="button" class="pricing-btn">Choose Plan</button>
+                        <button type="button" class="pricing-btn" onclick="handleSubscribeClick(2)">Choose Plan</button>
                     </div>
                 </div>
             </div>
@@ -327,7 +305,7 @@
                 <div
                     class=" shadow-sm pricing rounded d-flex flex-column justify-content-center align-items-center gap-4 p-4 h-100">
                     <div>
-                        <span>Basic Plan</span>
+                        <span>Premium Plan</span>
                     </div>
                     <div>
                         <span class="h1">₹ 1,500</span>
@@ -351,7 +329,39 @@
                         <span>Advance Plan</span>
                     </div>
                     <div>
-                        <button type="button" class="pricing-btn">Choose Plan</button>
+                        <button type="button" class="pricing-btn" onclick="handleSubscribeClick(3)">Choose Plan</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 mb-2 flex-fill" data-aos="flip-left" data-aos-duration="2000">
+                <div
+                    class=" shadow-sm pricing rounded d-flex flex-column justify-content-center align-items-center gap-4 p-4 h-100">
+                    <div>
+                        <span>Enterprise Plan</span>
+                    </div>
+                    <div>
+                        <span class="h1">₹ 2000</span>
+                    </div>
+                    <div>
+                        <span>100% free. Forever</span>
+                    </div>
+                    <div>
+                        <span>ENJOY ALL THE FEATURES</span>
+                    </div>
+                    <div>
+                        <span>150 GB Bandwidth</span>
+                    </div>
+                    <div>
+                        <span>100 GB Storage</span>
+                    </div>
+                    <div>
+                        <span>$1.00 / GB Overages</span>
+                    </div>
+                    <div>
+                        <span>Advance Plan</span>
+                    </div>
+                    <div>
+                        <button type="button" class="pricing-btn" onclick="handleSubscribeClick(4)">Choose Plan</button>
                     </div>
                 </div>
             </div>
