--- a/Backend/public/login.html
+++ b/Backend/public/login.html
@@ -49,10 +49,10 @@
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
                                         href="/index.html">Home</a>
                                 </li>
-                                <li class="nav-item px-2">
+                                <!-- <li class="nav-item px-2">
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
                                         href="/renderNow.html">Render Now</a>
-                                </li>
+                                </li> -->
                                 <li class="nav-item px-2">
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
                                         href="/index.html#pricing">Pricing</a>
