--- a/Backend/public/register.html
+++ b/Backend/public/register.html
@@ -60,12 +60,12 @@
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
                                         href="/index.html">Home</a>
                                 </li>
-                                <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover text-white" id="dashboard" aria-current="page"
+                                <li class="nav-item px-2" id="dashboard">
+                                    <a class="nav-link rounded nav-space nav-link-hover text-white"  aria-current="page"
                                         href="/dashboard.html">dashboard</a>
                                 </li>
-                                <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
+                                <li class="nav-item px-2" id="rendernow">
+                                    <a class="nav-link rounded nav-space nav-link-hover text-white"  aria-current="page"
                                         href="/renderNow.html">Render Now</a>
                                 </li>
                                 <li class="nav-item px-2">
@@ -104,7 +104,7 @@
         <div class="container text-center p-5 width-adjust">
             <form class="border rounded shadow-lg p-3" onsubmit="validateAndSubmit(event)">
                 <div class="mb-3">
-                    <label for="username" class="form-label fw-bold">User Name</label>
+                    <label for="username" class="form-label fw-bold">Name</label>
                     <input type="text" class="form-control py-2" id="username" placeholder="username">
                     <div id="usernameError" class="error-message text-danger"></div>
                 </div>
