--- a/Backend/public/renderNow.html
+++ b/Backend/public/renderNow.html
@@ -18,6 +18,13 @@
 
 <body>
 
+    <!-- File list popup -->
+    <div id="fileListPopup">
+        <span class="closeButton" onclick="closeFileListPopup()">&times;</span>
+        <h3>Selected Files:</h3>
+        <ul id="fileList"></ul>
+    </div>
+
     <!-- nav -->
 
     <div class="container-fluid nav-bg sticky">
@@ -38,11 +45,11 @@
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
                                         href="/index.html">Home</a>
                                 </li>
-                                <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover text-white" id="dashboard" aria-current="page"
-                                        href="/dashboard.html">dashboard</a>
+                                <li class="nav-item px-2" id="dashboard">
+                                    <a class="nav-link rounded nav-space nav-link-hover text-white"
+                                        aria-current="page" href="/dashboard.html">dashboard</a>
                                 </li>
-                                <li class="nav-item px-2">
+                                <li class="nav-item px-2" id="rendernow">
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
                                         href="/renderNow.html">Render Now</a>
                                 </li>
@@ -63,11 +70,12 @@
                                         href="/getQuote.html">Get a Quote</a>
                                 </li>
                                 <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover login text-white" id="Register" aria-current="page"
-                                        href="/login.html">Login</a>
+                                    <a class="nav-link rounded nav-space nav-link-hover login text-white" id="Register"
+                                        aria-current="page" href="/login.html">Login</a>
                                 </li>
                                 <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover logout text-white" id="Register" aria-current="page" href="#" onclick="logout()">Logout</a>
+                                    <a class="nav-link rounded nav-space nav-link-hover logout text-white" id="Register"
+                                        aria-current="page" href="#" onclick="logout()">Logout</a>
                                 </li>
                             </ul>
                         </form>
@@ -89,7 +97,7 @@
         </div>
     </div>
 
-    <div class="container-fluid form-container" data-aos="fade-up">
+    <!-- <div class="container-fluid form-container" data-aos="fade-up">
         <div class="container text-center p-5">
             <form class="row g-3">
                 <div class="col-md-12">
@@ -102,7 +110,24 @@
                 </div>
             </form>
         </div>
+    </div> -->
+
+    <div class="container-fluid form-container p-5" data-aos="fade-up">
+        <div class="container text-center p-5">
+            <form class="row g-3 p-5" onsubmit="handleFormSubmission(event)">
+                <div class="col-md-12">
+                    <label for="folderInput" class="form-label">
+                        <input type="file" id="folderInput" name="folderInput" class="form-control" multiple
+                            webkitdirectory directory onchange="showFileList()">
+                    </label>
+                </div>
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </form>
+        </div>
     </div>
+
 
     <div class="container-fluid secondary pt-5">
         <div class="container justify-content-between">
@@ -228,7 +253,7 @@
         </div>
     </div>
 
-    <script src="./js/index.js"></script>
+    <script src="./js/renderNow.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
