added upload file and inserted into database

--- a/Backend/public/renderNow.html
+++ b/Backend/public/renderNow.html
@@ -25,6 +25,17 @@
         <ul id="fileList"></ul>
     </div>
 
+    <div class="popup" id="failedPopup">
+        <div class="popup-content d-flex align-items-center">
+            <div>
+                <p class="failedMsg"></p>
+            </div>
+            <div>
+                <span class="close" onclick="failedClosePopup('failedPopup')">&times;</span>
+            </div>
+        </div>
+    </div>
+
     <!-- nav -->
 
     <div class="container-fluid nav-bg sticky">
