added dashboard api

--- a/Backend/public/dashboard.html
+++ b/Backend/public/dashboard.html
@@ -16,6 +16,17 @@
 
 <body>
 
+    <div class="popup" id="failedPopup">
+        <div class="popup-content d-flex align-items-center">
+            <div>
+                <p class="failedMsg"></p>
+            </div>
+            <div>
+                <span class="close" onclick="failedClosePopup('failedPopup')">&times;</span>
+            </div>
+        </div>
+    </div>
+
     <!-- nav -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
