--- a/Backend/public/dashboard.html
+++ b/Backend/public/dashboard.html
@@ -154,6 +154,9 @@
                         </tr> -->
                     </tbody>
                 </table>
+                <div class="d-flex justify-content-center">
+                    <p id="no-data"></p>
+                </div>
             </div>
         </div>
     </div>
