updated payment logic

--- a/Backend/public/dashboard.html
+++ b/Backend/public/dashboard.html
@@ -109,7 +109,15 @@
         <div class="container">
             <div class="row d-flex justify-content-between">
                 <div class="col-md-5 dash-inner mb-2 p-3">
-                    <p id="total"></p>
+                    <div>
+                        <p id="balance"></p>
+                    </div>
+                    <div>
+                        <p id="spend"></p>
+                    </div>
+                    <div>
+                        <p id="total"></p>
+                    </div>
                 </div>
                 <div class="col-md-3 mb-2 ">
                     <div class="container mb-2 p-3 dash-inner nested-container">
