--- a/Backend/public/dashboard.html
+++ b/Backend/public/dashboard.html
@@ -65,8 +65,8 @@
                                         href="/index.html">Home</a>
                                 </li>
                                 <li class="nav-item px-2" id="dashboard">
-                                    <a class="nav-link rounded nav-space nav-link-hover text-white" 
-                                        aria-current="page" href="/dashboard.html">dashboard</a>
+                                    <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
+                                        href="/dashboard.html">dashboard</a>
                                 </li>
                                 <li class="nav-item px-2" id="rendernow">
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
@@ -108,15 +108,26 @@
     <div class="container-fluid secondary pt-5 pb-3">
         <div class="container">
             <div class="row d-flex justify-content-between">
-                <div class="col-md-5 dash-inner mb-2 p-3">
+                <div class="col-md-5 d-flex justify-content-around dash-inner mb-2 p-3">
                     <div>
-                        <p id="balance"></p>
+                        <div>
+                            <p id="balance"></p>
+                        </div>
+                        <div>
+                            <p id="spend"></p>
+                        </div>
+                        <div>
+                            <p id="total"></p>
+                        </div>
                     </div>
                     <div>
-                        <p id="spend"></p>
-                    </div>
-                    <div>
-                        <p id="total"></p>
+                        <div>
+                            <a class="nav-link rounded p-2 nav-space nav-link-hover login text-white" id="Register"
+                                aria-current="page" href="/refund.html">Refund</a>
+                        </div>
+                        <div class="mt-1">
+                            <p id="refund-amound">sdf</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-3 mb-2 ">
@@ -168,7 +179,7 @@
             </div>
         </div>
     </div>
-    
+
 
     <div class="footer">
         <div class="container text-center p-4">
