--- a/Backend/public/dashboard.html
+++ b/Backend/public/dashboard.html
@@ -125,9 +125,9 @@
                             <a class="nav-link rounded p-2 nav-space nav-link-hover login text-white" id="Register"
                                 aria-current="page" href="/refund.html">Refund</a>
                         </div>
-                        <div class="mt-1">
+                        <!-- <div class="mt-1">
                             <p id="refund-amound">sdf</p>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="col-md-3 mb-2 ">
