--- a/Backend/public/refund.html
+++ b/Backend/public/refund.html
@@ -49,10 +49,14 @@
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
                                         href="/index.html">Home</a>
                                 </li>
-                                <!-- <li class="nav-item px-2">
+                                <li class="nav-item px-2" id="dashboard">
+                                    <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
+                                        href="/dashboard.html">dashboard</a>
+                                </li>
+                                <li class="nav-item px-2" id="rendernow">
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
                                         href="/renderNow.html">Render Now</a>
-                                </li> -->
+                                </li>
                                 <li class="nav-item px-2">
                                     <a class="nav-link rounded nav-space nav-link-hover text-white" aria-current="page"
                                         href="/index.html#pricing">Pricing</a>
@@ -70,8 +74,12 @@
                                         href="/getQuote.html">Get a Quote</a>
                                 </li>
                                 <li class="nav-item px-2">
-                                    <a class="nav-link rounded nav-space nav-link-hover text-white" id="Register"
+                                    <a class="nav-link rounded nav-space nav-link-hover login text-white" id="Register"
                                         aria-current="page" href="/login.html">Login</a>
+                                </li>
+                                <li class="nav-item px-2">
+                                    <a class="nav-link rounded nav-space nav-link-hover logout text-white" id="Register"
+                                        aria-current="page" href="#" onclick="logout()">Logout</a>
                                 </li>
                             </ul>
                         </form>
