--- a/Backend/public/dashboard.html
+++ b/Backend/public/dashboard.html
@@ -119,16 +119,11 @@
                         <div>
                             <p id="total"></p>
                         </div>
-                    </div>
+                    </div>  
                     <div>
-                        <div>
-                            <a class="nav-link rounded p-2 nav-space nav-link-hover login text-white" id="Register"
-                                aria-current="page" href="/refund.html">Refund</a>
-                        </div>
-                        <!-- <div class="mt-1">
-                            <p id="refund-amound">sdf</p>
-                        </div> -->
-                    </div>
+                        <a class="nav-link p-1 rounded nav-space nav-link-hover login text-white" id="Register"
+                        aria-current="page" href="/refund.html">Refund</a>
+                    </div>                        
                 </div>
                 <div class="col-md-3 mb-2 ">
                     <div class="container mb-2 p-3 dash-inner nested-container">
