--- a/Backend/public/index.html
+++ b/Backend/public/index.html
@@ -226,7 +226,7 @@
         </div>
     </div>
 
-    <div class="container-fluid secondary text-center">
+    <div class="container-fluid secondary text-center" id="pricing">
         <div class="container d-flex flex-column justify-content-center align-items-center p-4" data-aos="flip-down">
             <div>
                 <span class="h1">
@@ -236,7 +236,7 @@
         </div>
     </div>
 
-    <div class="container my-5" id="pricing">
+    <!-- <div class="container my-5" id="pricing">
         <div class="row text-center g-lg-5 d-flex gap-3">
             <div class="col-lg-2 col-md-4 col-sm-6 mb-2 flex-fill" data-aos="flip-left" data-aos-duration="2000">
                 <div class="shadow-sm pricing rounded d-flex flex-column justify-content-center align-items-center gap-4 p-4 h-100">
@@ -269,104 +269,30 @@
                     </form>
                 </div>
             </div>
+        </div>
+    </div> -->
+
+    <div class="container my-5" >
+        <div class="row text-center g-lg-5 d-flex gap-3">
             <div class="col-lg-2 col-md-4 col-sm-6 mb-2 flex-fill" data-aos="flip-left" data-aos-duration="2000">
-                <div
-                    class=" shadow-sm pricing rounded d-flex flex-column justify-content-center align-items-center gap-4 p-4 h-100">
+                <div class="shadow-sm pricing rounded d-flex flex-column justify-content-center align-items-center gap-4 p-4 h-100">
                     <div>
-                        <span>Standard Plan</span>
+                        <span>Recharge Account</span>
                     </div>
                     <div>
-                        <span class="h1">₹ 1000</span>
+                        <span class="h1">Custom Amount</span>
                     </div>
                     <div>
-                        <span>100% free. Forever</span>
+                        <span>Recharge your account with the desired amount</span>
                     </div>
-                    <div>
-                        <span>ENJOY ALL THE FEATURES</span>
-                    </div>
-                    <div>
-                        <span>150 GB Bandwidth</span>
-                    </div>
-                    <div>
-                        <span>100 GB Storage</span>
-                    </div>
-                    <div>
-                        <span>$1.00 / GB Overages</span>
-                    </div>
-                    <div>
-                        <span>Advance Plan</span>
-                    </div>
-                    <div>
-                        <button type="button" class="pricing-btn" onclick="handleSubscribeClick(2)">Choose Plan</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 mb-2 flex-fill" data-aos="flip-left" data-aos-duration="2000">
-                <div
-                    class=" shadow-sm pricing rounded d-flex flex-column justify-content-center align-items-center gap-4 p-4 h-100">
-                    <div>
-                        <span>Premium Plan</span>
-                    </div>
-                    <div>
-                        <span class="h1">₹ 1,500</span>
-                    </div>
-                    <div>
-                        <span>100% free. Forever</span>
-                    </div>
-                    <div>
-                        <span>ENJOY ALL THE FEATURES</span>
-                    </div>
-                    <div>
-                        <span>150 GB Bandwidth</span>
-                    </div>
-                    <div>
-                        <span>100 GB Storage</span>
-                    </div>
-                    <div>
-                        <span>$1.00 / GB Overages</span>
-                    </div>
-                    <div>
-                        <span>Advance Plan</span>
-                    </div>
-                    <div>
-                        <button type="button" class="pricing-btn" onclick="handleSubscribeClick(3)">Choose Plan</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 mb-2 flex-fill" data-aos="flip-left" data-aos-duration="2000">
-                <div
-                    class=" shadow-sm pricing rounded d-flex flex-column justify-content-center align-items-center gap-4 p-4 h-100">
-                    <div>
-                        <span>Enterprise Plan</span>
-                    </div>
-                    <div>
-                        <span class="h1">₹ 2000</span>
-                    </div>
-                    <div>
-                        <span>100% free. Forever</span>
-                    </div>
-                    <div>
-                        <span>ENJOY ALL THE FEATURES</span>
-                    </div>
-                    <div>
-                        <span>150 GB Bandwidth</span>
-                    </div>
-                    <div>
-                        <span>100 GB Storage</span>
-                    </div>
-                    <div>
-                        <span>$1.00 / GB Overages</span>
-                    </div>
-                    <div>
-                        <span>Advance Plan</span>
-                    </div>
-                    <div>
-                        <button type="button" class="pricing-btn" onclick="handleSubscribeClick(4)">Choose Plan</button>
-                    </div>
+                    <form id="recharge-form">
+                        <button type="button" class="pricing-btn" onclick="handleSubscribeClick()">Recharge Now</button>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
+    
 
     <div class="container-fluid secondary text-center">
         <div class="container d-flex flex-column justify-content-center align-items-center p-4" data-aos="flip-down">
