--- a/Backend/public/refund.html
+++ b/Backend/public/refund.html
@@ -90,9 +90,7 @@
 
     </div>
 
-    <div class="container-fluid form-container p-5" data-aos="fade-up">
-        <div class="container text-center p-5">
-            <form class="row g-3 p-5">
+    <!-- <form class="row g-3 p-5">
                 <div>
                     <label for="inputRefundAmount">Refund Amount</label>
                 </div>
@@ -104,7 +102,11 @@
                 <div class="col-md-12">
                     <button type="button" class="refund" onclick="submitRefundRequest()">Refund Request</button>
                 </div>
-            </form>
+            </form> -->
+
+    <div class="container-fluid form-container p-5" data-aos="fade-up">
+        <div class="container text-center p-5">
+            
         </div>
     </div>
 
